# multi-human-swarm-control

./: .gitignore  LICENSE  README.md  experiment.sh  requirements.txt
docker/: .dockerignore  Dockerfile
experiments/: qt-opengl.argos  user_study_scenario1.argos  user_study_scenario2.argos  webviz_training.argos
src/SCT_models/: worker.yaml
src/controllers/: CMakeLists.txt
src/controllers/worker/: CMakeLists.txt  worker.cpp  worker.h
src/loop_functions/: CMakeLists.txt
src/loop_functions/leaderworker_loop_functions/: CMakeLists.txt  experiment_loop_functions.cpp  experiment_loop_functions.h  manualcontrol_qtuser_functions.cpp  manualcontrol_qtuser_functions.h  manualcontrol_webvizuser_functions.cpp  manualcontrol_webvizuser_functions.h
src/scripts/: load_data.py  plot_stats_pb.py  stat_significance_test.R  stat_significance_test_anova.R
src/web_app/: app.py
src/web_app/templates/: start_page.html  training_page.html  trial1_page.html  trial2_page.html
